System particles end at the wrong frame when using alternative start/end frames #43768

Closed
opened 2015-02-21 18:48:27 +01:00 by Kagi · 14 comments

System Information
Windows 8.1 / OSX 10.10.2 / Xubuntu 13.10

Blender Version
Broken: 2.73a 64bits official on both systems

When using alternative start and end frames in the timeline, a particle system doesn't end at the right frame.

In my case it ends too early. The particle system start at frame 1 and ends at frame 200. I use alternative start/end frames from 1 to 250. The simulation start right at frame 1 but ends at frame 132, because when I disable alternative start and end from the timeline, I noticed that the 'global' start and end frames are from 100 to 132.

Exact steps for others to reproduce the error

Here's a blend file:

https://www.dropbox.com/s/3m8d0y4c9juktm0/bug-particules-fluide.blend?dl=0

Open the file, play the simulation and it should anormaly stops at 132 (with a weird effect after). Then disable the alternate start/end from the timeline, the animation start at 100 and end at 132. Changing the frames to start at 1 and ends at 250 solve the problem when enabling alternative start/end frames again.

**System Information** Windows 8.1 / OSX 10.10.2 / Xubuntu 13.10 **Blender Version** Broken: 2.73a 64bits official on both systems When using alternative start and end frames in the timeline, a particle system doesn't end at the right frame. In my case it ends too early. The particle system start at frame 1 and ends at frame 200. I use alternative start/end frames from 1 to 250. The simulation start right at frame 1 but ends at frame 132, because when I disable alternative start and end from the timeline, I noticed that the 'global' start and end frames are from 100 to 132. **Exact steps for others to reproduce the error** Here's a blend file: https://www.dropbox.com/s/3m8d0y4c9juktm0/bug-particules-fluide.blend?dl=0 Open the file, play the simulation and it should anormaly stops at 132 (with a weird effect after). Then disable the alternate start/end from the timeline, the animation start at 100 and end at 132. Changing the frames to start at 1 and ends at 250 solve the problem when enabling alternative start/end frames again.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JonK

Added subscriber: @JonK
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Julian Eisel self-assigned this 2015-02-21 19:55:23 +01:00
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Had a look at the code, and I think it's fine as it is. It makes sense to have the particle lifetime always being relative to the total start/end frames of the scene, as the preview start/end frames is aimed for temporary changes without having any affect on the scene itself. Or differently said: The preview range is just for preview ;)

So thanks for the report, but I don't see a bug here (luckily) :)

(CC'ing @LukasTonne so he can correct me/the code in case I'm wrong)

Had a look at the code, and I think it's fine as it is. It makes sense to have the particle lifetime always being relative to the total start/end frames of the scene, as the preview start/end frames is aimed for temporary changes without having any affect on the scene itself. Or differently said: The preview range is just for preview ;) So thanks for the report, but I don't see a bug here (luckily) :) (CC'ing @LukasTonne so he can correct me/the code in case I'm wrong)
Author

I'm fine with the fact that alternative start/end frames are for preview, but shouldn't we have something to warn us that particle systems won't be correct in that case? Or disabling particles when using the alternative start/end frames? Or something else to avoid doing the same mistake I did... Or maybe I missed it.

I use the alternative start/end frames feature all the time and all seems fine with it except the particles.

I'm fine with the fact that alternative start/end frames are for preview, but shouldn't we have something to warn us that particle systems won't be correct in that case? Or disabling particles when using the alternative start/end frames? Or something else to avoid doing the same mistake I did... Or maybe I missed it. I use the alternative start/end frames feature all the time and all seems fine with it except the particles.

Added subscriber: @zeauro

Added subscriber: @zeauro

I think it is valid. It does not make more sense to limit particle caching to total end frame of scene than for other physics.
(In fact, here, only end frame is limited.)

For cloth, softbodies, rigid bodies, caching continues after total end frame.

For me, it does not make sense to bake after active interval.
For playback, it is really weird to block it before end of active interval.

I think it is valid. It does not make more sense to limit particle caching to total end frame of scene than for other physics. (In fact, here, only end frame is limited.) For cloth, softbodies, rigid bodies, caching continues after total end frame. For me, it does not make sense to bake after active interval. For playback, it is really weird to block it before end of active interval.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Okay, had a deeper look and I agree. It should take the preview range into account. Fix incoming.

Okay, had a deeper look and I agree. It *should* take the preview range into account. Fix incoming.
Author

Great. Thank you. :)

Great. Thank you. :)

This issue was referenced by 0f1ffd4792

This issue was referenced by 0f1ffd4792acb0d93f12bad593ae8ee0054dcc5b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 0f1ffd4792.

Closed by commit 0f1ffd4792.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43768
No description provided.